--- a/TwitterClone/TwitterClone/Base.lproj/Main.storyboard
+++ b/TwitterClone/TwitterClone/Base.lproj/Main.storyboard
@@ -22,33 +22,34 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomCell" rowHeight="120" id="61u-w3-NPm" customClass="CustomTableViewCell" customModule="TwitterClone" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomCell" id="61u-w3-NPm" customClass="CustomTableViewCell" customModule="TwitterClone" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="61u-w3-NPm" id="rXt-jk-zOH">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xAK-cp-g6h">
-                                                    <rect key="frame" x="120" y="0.0" width="480" height="119"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4sc-SR-8oB">
+                                                    <rect key="frame" x="8" y="8" width="154" height="154"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="4sc-SR-8oB" secondAttribute="height" multiplier="1:1" id="lAG-vS-LFE"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xAK-cp-g6h">
+                                                    <rect key="frame" x="172" y="8" width="420" height="154"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4sc-SR-8oB">
-                                                    <rect key="frame" x="10" y="10" width="100" height="99"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="100" id="cpk-oM-14T"/>
-                                                    </constraints>
-                                                </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="xAK-cp-g6h" secondAttribute="bottom" id="4f3-nd-qTe"/>
-                                                <constraint firstItem="4sc-SR-8oB" firstAttribute="top" secondItem="rXt-jk-zOH" secondAttribute="top" constant="10" id="5do-hr-MrA"/>
-                                                <constraint firstItem="xAK-cp-g6h" firstAttribute="leading" secondItem="4sc-SR-8oB" secondAttribute="trailing" constant="10" id="F9y-rL-zFc"/>
-                                                <constraint firstAttribute="bottom" secondItem="4sc-SR-8oB" secondAttribute="bottom" constant="10" id="ckx-mu-7JB"/>
-                                                <constraint firstItem="xAK-cp-g6h" firstAttribute="top" secondItem="rXt-jk-zOH" secondAttribute="top" id="cyX-0Z-miG"/>
-                                                <constraint firstAttribute="trailing" secondItem="xAK-cp-g6h" secondAttribute="trailing" id="dZ8-5V-icf"/>
-                                                <constraint firstItem="4sc-SR-8oB" firstAttribute="leading" secondItem="rXt-jk-zOH" secondAttribute="leading" constant="10" id="e8W-58-7Ou"/>
+                                                <constraint firstItem="xAK-cp-g6h" firstAttribute="leading" secondItem="4sc-SR-8oB" secondAttribute="trailing" constant="10" id="2fV-6e-zxM"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="xAK-cp-g6h" secondAttribute="trailing" id="4QQ-lu-O7P"/>
+                                                <constraint firstItem="4sc-SR-8oB" firstAttribute="top" secondItem="rXt-jk-zOH" secondAttribute="topMargin" id="6L4-Yu-NNc"/>
+                                                <constraint firstItem="xAK-cp-g6h" firstAttribute="top" secondItem="rXt-jk-zOH" secondAttribute="topMargin" id="96e-2n-VBM"/>
+                                                <constraint firstAttribute="centerY" secondItem="4sc-SR-8oB" secondAttribute="centerY" id="C8f-9R-h9g"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="4sc-SR-8oB" secondAttribute="bottom" id="IXZ-gn-cew"/>
+                                                <constraint firstItem="4sc-SR-8oB" firstAttribute="leading" secondItem="rXt-jk-zOH" secondAttribute="leadingMargin" id="LNv-uB-TcZ"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="xAK-cp-g6h" secondAttribute="bottom" id="vhf-Gs-hwG"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -66,10 +67,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ht5-g9-Iik" secondAttribute="bottom" id="K9A-4l-uzQ"/>
-                            <constraint firstItem="Ht5-g9-Iik" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KXf-O6-RSE"/>
-                            <constraint firstAttribute="trailing" secondItem="Ht5-g9-Iik" secondAttribute="trailing" id="UFi-R5-ZCo"/>
-                            <constraint firstItem="Ht5-g9-Iik" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Yfl-ry-xGF"/>
+                            <constraint firstItem="Ht5-g9-Iik" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="GZz-CR-OjH"/>
+                            <constraint firstItem="Ht5-g9-Iik" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="VP9-wb-b7G"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ht5-g9-Iik" secondAttribute="bottom" id="nFm-8L-ExK"/>
+                            <constraint firstAttribute="trailing" secondItem="Ht5-g9-Iik" secondAttribute="trailing" id="qZa-jO-rBz"/>
                         </constraints>
                     </view>
                     <connections>
@@ -184,7 +185,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KZ9-KM-G3O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="882" y="162"/>
+            <point key="canvasLocation" x="880" y="131"/>
         </scene>
     </scenes>
 </document>
